[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt_hub_py"
version = "0.0.1"
description = "A package to manage prompts with PostgreSQL"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ashok Reddy", email = "kummethashokumareddy@gmail.com" }
]
dependencies = [
    "psycopg2>=2.9.9"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/PromptMania/prompt-hub-py"  # Optional if you have a repo

[tool.setuptools.packages.find]
where = ["."]
